Remove unneccessary scrolling behavior

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Remove Scrolling Behavior-bounce */
+body {
+  overscroll-behavior: none;
+}
+:root {
+  overscroll-behavior: none;
+  overflow-x: hidden; 
+}
