Add cursor:pointer to all buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,9 @@ body {
   background: var(--background);
   color: var(--foreground);
 }
+button{
+  cursor: pointer;
+}
 
 /* Remove Scrolling Behavior-bounce */
 body {
